changed input color

--- a/src/index.css
+++ b/src/index.css
@@ -305,7 +305,7 @@ textarea {
   border: none;
   text-align: center;
   transition: all 200ms ease-in;
-  color: #eee;
+  color: #ff0000;
   font-size: 16px;
   line-height: 3rem;
   outline: none;
